add quick search

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ img/._.DS_Store~HEAD
 img/._.DS_Store~origin
 img/experience/thumbnail/._.DS_Store~HEAD
 img/experience/thumbnail/._.DS_Store~origin
+._.DS_Store
+.idea/~
